<resources>
    <string name="app_name">QRShare</string>
    <string name="action_settings">設定</string>
    <string name="home_fragment_label">ホーム</string>
    <string name="upload_fragment_label">アップロード</string>
    <string name="detail_fragment_label">詳細</string>
    <string name="login_fragment_label">ログイン</string>
    <string name="fab_create_new">新規作成</string>
    <string name="fab_upload_qr_code">QRコードをアップロード</string>
    <string name="text_url">URL</string>
    <string name="QRCode">QRコード</string>
    <string name="hint_input_URL">URLを入力</string>
    <string name="error_URL">URLを入力してください</string>
    <string name="text_hint_image_QRCode">URLを入力するとここにQRコードが表示されます</string>
    <string name="text_tag">ハッシュタグ</string>
    <string name="text_button_create">作成</string>
    <string name="menu_submit">送信</string>
    <string name="toast_finish_upload">アップロードが完了しました</string>
    <string name="toast_fail_upload">アップロードに失敗しました。時間をおいて再送信してください</string>
    <string name="text_invalid_URL">無効なURLです</string>
    <string name="toast_prompt_qr_code">QRコードを生成してください</string>
    <string name="text_introduce">QR Shareへようこそ！</string>
    <string name="activity_login">Login</string>
    <string name="web_client_id">496172441501-u6artlcujs1vn1i28hqlcvjffi175so3.apps.googleusercontent.com</string>
    <string name="toast_invalid_or_fail_access_URL">URLが無効かページにアクセスできません</string>
    <string name="toast_not_found_app">対応アプリが見つかりませんでした</string>
    <string name="toast_fail_decode_qr_code">URLを取得できませんでした</string>
    <string name="button_save_qr_code">QRコードを保存</string>
    <string name="toast_save">保存しました</string>
    <string name="error_hash_tag">ハッシュタグは#から始まる文字列にしてください</string>
    <string name="toast_success_login">ログインに成功しました</string>
    <string name="toast_failure_login">ログインに失敗しました</string>
</resources>